# config_center

./: README.md  cc.json
client/lib/: cc_reader.class.php  cc_writer.class.php
client/objc/: make.sh  make_db.php
client/objc/make_sources/: make_source_definition_h.php  make_source_item_h.php  make_source_item_m.php
client/objc/make_sources/templates/: CCDefinition_h.tpl  CCItem_h.tpl  CCItem_m.tpl  CCNetwork_h.tpl  CCNetwork_m.tpl  CCStorage_h.tpl  CCStorage_m.tpl  CC_h.tpl  CC_m.tpl
lib/: CMakeLists.txt
lib/include/: CCFileMonitor.h  CCWriter.h
lib/src/: CCFileMonitor.cpp  CCWriter.cpp
server/: CMakeLists.txt
server/etc/: config.json
server/include/: CCClientListener.h  CCClientProtocol.h  CCClientService.h  CCConfig.h  CCManagerListener.h  CCManagerProtocol.h  CCManagerService.h  CCOnline.h
server/src/: CCClientListener.cpp  CCClientService.cpp  CCConfig.cpp  CCManagerListener.cpp  CCManagerService.cpp  CCOnline.cpp  main.cpp
toolchains/: cc_memory_get.php  cc_reader.class.php
toolchains/writer/: CMakeLists.txt
toolchains/writer/src/: WriteToCCServer.cpp  WriteToSharedMemory.cpp
